feat:google anaytics added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@ table {
 }
 </style>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-08W18NWHWE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-08W18NWHWE');
+</script>
+
 </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
