feat: nov paper

--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@ need your help to develop guidelines for the development of accessible virtual r
           <td>Feb 2023</td>
           <td>Brittany, Tina, Alex and Priyankan's paper “'I... caught a person casing my house... and scared him off:' The Use of Security-Focused Smart Home Devices by People with Disabilities” has been accepted at ACM CHI 2023.</td>
       </tr>
+      <tr>
+          <td>Nov 2023</td>
+          <td>K. Venkatasubramanian, T-M. Ranalli, P. Kirupaharan, D. Solanki, K. Mankodiya “Understanding the challenges nurses encounter with monitoring technologies in a NICU International Journal of Human-Computer Interaction.” International Journal of Human Computer Interaction (IJHCI).</td>
+      </tr>
+
+      
       
       <!-- Add more rows as needed -->
   </table>
@@ -181,11 +187,20 @@ need your help to develop guidelines for the development of accessible virtual r
           <th class="column2"></th>
       </tr>
       <tr>
+          <td>Nov 2023</td>
+          <td>K. Venkatasubramanian, T-M. Ranalli, P. Kirupaharan, D. Solanki, K. Mankodiya “Understanding the challenges nurses encounter with monitoring technologies in a NICU International Journal of Human-Computer Interaction.” International Journal of Human Computer Interaction (IJHCI)
+          </br>
+          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
+          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-youtube-square fa-fw w3-margin-right"></i>Talk</a>  / 
+          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bitcoin fa-fw w3-margin-right"></i>Bibtex</a>
+        </td>
+      </tr>
+      <tr>
           <td>Feb 2023</td>
           <td>'I... caught a person casing my house... and scared him off:' The Use of Security-Focused Smart Home Devices by People with Disabilities.
             Brittany, Dr. Tina-Marie Ranalli , Alex, Priyankan and Prof. Krishna Venkatasubramanian 
           </br>
-          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
+          <a href="papers/chi23sshd.pdf" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
           <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-youtube-square fa-fw w3-margin-right"></i>Talk</a>  / 
           <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bitcoin fa-fw w3-margin-right"></i>Bibtex</a>
         </td>
@@ -194,7 +209,7 @@ need your help to develop guidelines for the development of accessible virtual r
           <td>September 2021</td>
           <td>Mobile Application to Identify Fish Species Using YOLO and Convolutional Neural Networks. Priyankan and Dr.TGI Fernando
           </br>
-          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
+          <a href="papers/Understanding the Challenges Nurses Encounter with Monitoring Technologies in a NICU.pdf" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
           <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-youtube-square fa-fw w3-margin-right"></i>Talk</a>  / 
           <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bitcoin fa-fw w3-margin-right"></i>Bibtex</a>
           </td>
