fix: fish paper

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ need your help to develop guidelines for the development of accessible virtual r
           <td>September 2021</td>
           <td>Mobile Application to Identify Fish Species Using YOLO and Convolutional Neural Networks. Priyankan and Dr.TGI Fernando
           </br>
-          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
-          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-youtube-square fa-fw w3-margin-right"></i>Talk</a>  / 
+          <a href="papers/Mobile Application to Identify Fish Species Using YOLO.pdf" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
+          <a href="https://www.youtube.com/watch?v=PuuBARG4S-0" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-youtube-square fa-fw w3-margin-right"></i>Talk</a>  / 
           <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bitcoin fa-fw w3-margin-right"></i>Bibtex</a>
           </td>
       </tr>
