--- a/index.html
+++ b/index.html
@@ -192,7 +192,15 @@ need your help to develop guidelines for the development of accessible virtual r
           <th class="column1"></th>
           <th class="column2"></th>
       </tr>
-      
+      <tr>
+          <td>May 2024</td>
+          <td>B. Lewis, P. Kirupaharan, T-M. Ranalli, and K. Venkatasubramanian. ``A3C: An Image-Association-Based Computing Device Authentication Framework for People with Upper Extremity Impairments,'' ACM Transactions of Accessible Computing (TACCESS), 2024 (Accepted for publication)
+          </br>
+          <a href="https://dl.acm.org/doi/pdf/10.1145/3652522" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
+          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-youtube-square fa-fw w3-margin-right"></i>Talk</a>  / 
+          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bitcoin fa-fw w3-margin-right"></i>Bibtex</a>
+        </td>
+      </tr>
       <tr>
           <td>Nov 2023</td>
           <td>K. Venkatasubramanian, T-M. Ranalli, P. Kirupaharan, D. Solanki, K. Mankodiya “Understanding the challenges nurses encounter with monitoring technologies in a NICU International Journal of Human-Computer Interaction.” International Journal of Human Computer Interaction (IJHCI)
