chore:year update

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ table {
     </a>
     <img src="yankan.jpg" style="width:45%;" class="w3-round"><br><br>
     <h4><b>Priyankan Kirupaharan</b></h4>
-    <p class="w3-text-grey">2nd year PhD student at University of Rhode Island (URI), USA.</p>
+    <p class="w3-text-grey">3rd year PhD student at University of Rhode Island (URI), USA.</p>
   </div>
   <div class="w3-bar-block">
     <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-user fa-fw w3-margin-right"></i>Priyankan Kirupaharan</a>
