chore:year update

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ table {
     <h1>About me</h1>
     <div style="text-align: justify;">
     <p>
-      Hello! My name is Priyankan Kirupaharan and I am a 2nd-year Computer Science PhD student at the University of Rhode Island. Currently, I am pursuing my academic journey with a keen focus on Virtual Reality, A11y and HCI4D. I have the privilege of being guided by <a href="https://kven.me/">Prof. Krishna Venkatasubramanian</a> and also been lucky to collaborate with <a href="https://ranalli.weebly.com/">Dr. Tina-Marie Ranalli </a>.
+      Hello! My name is Priyankan Kirupaharan and I am a 3rd-year Computer Science PhD student at the University of Rhode Island. Currently, I am pursuing my academic journey with a keen focus on Virtual Reality, A11y and HCI4D. I have the privilege of being guided by <a href="https://kven.me/">Prof. Krishna Venkatasubramanian</a> and also been lucky to collaborate with <a href="https://ranalli.weebly.com/">Dr. Tina-Marie Ranalli </a>.
     </p>
 
     <p>
