feat: new updates

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ table {
     </p>
 
   </div>
-  <hr>
+  <hr style="border: 1px solid black;">
    <h1 style="display: inline; color: red; font-weight: bold;">Join Our Study on VR! <img src="VR_icon.png"></h1>
   
      <h1 style="color: #333; font-size: 36px;">Participants Wanted!</h1>
@@ -139,7 +139,7 @@ need your help to develop guidelines for the development of accessible virtual r
     <p style="color: #666; font-size: 18px;">Email us at <a href="mailto:abc@gmail.com" style="color: #007bff; text-decoration: none;">asset.uri@proton.me</a></p>
 
   
-
+    <hr style="border: 1px solid black;">
 
   <h1>Updates</h1>
   <div class="scroll">
@@ -147,6 +147,18 @@ need your help to develop guidelines for the development of accessible virtual r
       <tr>
           <th class="column1"></th>
           <th class="column2"></th>
+      </tr>
+
+      <tr>
+        <td>August 2024</td>
+        <td>Was awarded a new <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2408481" target="_blank"> National Science Foundation (NSF) Human-Centered Computing (HCC) grant </a> for design VR-mediated technologies that empower adults with intellectual and developmental disabilities to engage in independent post-trauma self-regulation to cope with the negative effects of trauma
+        </td>
+      </tr>
+
+      <tr>
+        <td>July 2024</td>
+        <td>Our paper “Considering Trauma in Accessible Design for People with Intellectual and Developmental Disabilities,” has been accepted at Communications of the ACM magazine.
+        </td>
       </tr>
 
       <tr>
@@ -183,6 +195,7 @@ need your help to develop guidelines for the development of accessible virtual r
 
   </div>
   
+  <hr style="border: 1px solid black;">
   <div class="w3-row-padding w3-padding-16" id="publications">
     <h1>Publications</h1>
   <div class="scroll">
