feat: new updates2

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ need your help to develop guidelines for the development of accessible virtual r
   </div>
 
   </div>
-  
+
   <hr style="border: 1px solid black;">
   <div class="w3-row-padding w3-padding-16" id="publications">
     <h1>Publications</h1>
@@ -217,7 +217,7 @@ need your help to develop guidelines for the development of accessible virtual r
           <td>Nov 2023</td>
           <td>K. Venkatasubramanian, T-M. Ranalli, P. Kirupaharan, D. Solanki, K. Mankodiya “Understanding the challenges nurses encounter with monitoring technologies in a NICU International Journal of Human-Computer Interaction.” International Journal of Human Computer Interaction (IJHCI)
           </br>
-          <a href="papers/Understanding the Challenges Nurses Encounter with Monitoring Technologies in a NICU.pdf" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
+          <a href="https://www.tandfonline.com/doi/full/10.1080/10447318.2023.2278297" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
           <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-youtube-square fa-fw w3-margin-right"></i>Talk</a>  / 
           <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bitcoin fa-fw w3-margin-right"></i>Bibtex</a>
         </td>
@@ -227,7 +227,7 @@ need your help to develop guidelines for the development of accessible virtual r
           <td>'I... caught a person casing my house... and scared him off:' The Use of Security-Focused Smart Home Devices by People with Disabilities.
             Brittany, Dr. Tina-Marie Ranalli , Alex, Priyankan and Prof. Krishna Venkatasubramanian 
           </br>
-          <a href="papers/chi23sshd.pdf" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
+          <a href="https://dl.acm.org/doi/10.1145/3544548.3581007" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
           <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-youtube-square fa-fw w3-margin-right"></i>Talk</a>  / 
           <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bitcoin fa-fw w3-margin-right"></i>Bibtex</a>
         </td>
