chore:april update

--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@ need your help to develop guidelines for the development of accessible virtual r
           <th class="column1"></th>
           <th class="column2"></th>
       </tr>
+      <tr>
+        <td>April 2025</td>
+        <td>Presented “Understanding the Accessibility of Single-User Virtual Reality Environments for Adults with Intellectual and Developmental Disabilities” poster at Third Annual International Graduate Student Showcase at URI</td>
+      </tr>
+
+      <tr>
+        <td>April 2025</td>
+        <td>Our paper “Understanding the Accessibility of Single-User Virtual Reality Environments for Adults with Intellectual and Developmental Disabilities” has been accepted at ACM DIS 2025</td>
+      </tr>
 
       <tr>
         <td>August 2024</td>
