feat: aug update

--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@ need your help to develop guidelines for the development of accessible virtual r
           <th class="column1"></th>
           <th class="column2"></th>
       </tr>
+       <tr>
+        <td>July 2025</td>
+        <td>Presented “Understanding the Accessibility of Single-User Virtual Reality Environments for Adults with Intellectual and Developmental Disabilities” paper at ACM Designing Interactive Systems (DIS) 2025 conference at Madeira, Portugal</td>
+      </tr>
       <tr>
         <td>April 2025</td>
         <td>Presented “Understanding the Accessibility of Single-User Virtual Reality Environments for Adults with Intellectual and Developmental Disabilities” poster at Third Annual International Graduate Student Showcase at URI</td>
@@ -212,6 +216,15 @@ need your help to develop guidelines for the development of accessible virtual r
       <tr>
           <th class="column1"></th>
           <th class="column2"></th>
+      </tr>
+      <tr>
+          <td>July 2025</td>
+          <td>P. Kirupaharan, T-M. Ranalli, and K. Venkatasubramanian. ``Understanding the Accessibility of Single-User Virtual Reality Environments for Adults with Intellectual and Developmental Disabilities,'' DIS '25: Proceedings of the 2025 ACM Designing Interactive Systems Conference
+          </br>
+          <a href="https://dl.acm.org/doi/full/10.1145/3715336.3735782" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>Paper</a> /
+          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-youtube-square fa-fw w3-margin-right"></i>Talk</a>  / 
+          <a href="https://github.com/yankanp" target="_blank" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bitcoin fa-fw w3-margin-right"></i>Bibtex</a>
+        </td>
       </tr>
       <tr>
           <td>May 2024</td>
