fix:year update

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ table {
     </a>
     <img src="yankan.jpg" style="width:45%;" class="w3-round"><br><br>
     <h4><b>Priyankan Kirupaharan</b></h4>
-    <p class="w3-text-grey">3rd year PhD student at University of Rhode Island (URI), USA.</p>
+    <p class="w3-text-grey">PhD student at University of Rhode Island (URI), USA.</p>
   </div>
   <div class="w3-bar-block">
     <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-user fa-fw w3-margin-right"></i>Priyankan Kirupaharan</a>
@@ -109,7 +109,7 @@ table {
     <h1>About me</h1>
     <div style="text-align: justify;">
     <p>
-      Hello! My name is Priyankan Kirupaharan and I am a 3rd-year Computer Science PhD student at the University of Rhode Island. Currently, I am pursuing my academic journey with a keen focus on Virtual Reality, A11y and HCI4D. I have the privilege of being guided by <a href="https://kven.me/">Prof. Krishna Venkatasubramanian</a> and also been lucky to collaborate with <a href="https://ranalli.weebly.com/">Dr. Tina-Marie Ranalli </a>.
+      Hello! My name is Priyankan Kirupaharan and I am a Computer Science PhD student at the University of Rhode Island. Currently, I am pursuing my academic journey with a keen focus on Virtual Reality, A11y and HCI4D. I have the privilege of being guided by <a href="https://kven.me/">Prof. Krishna Venkatasubramanian</a> and also been lucky to collaborate with <a href="https://ranalli.weebly.com/">Dr. Tina-Marie Ranalli </a>.
     </p>
 
     <p>
