fix:minor edit2

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         <p class="hero-sub">
           I’m a Computer Science PhD candidate at the University of Rhode Island (ASSET Lab), working on accessibility and immersive technology.
           My research focuses on making VR usable and empowering for adults with intellectual and developmental disabilities (I/DD),
-          and translating insights into practical design guidance and deployed applications.
+          and translating insights into practical design guidance and deployed applications. I have the privilege of being guided by <a href="https://kven.me/">Prof. Krishna Venkatasubramanian</a> and also been lucky to collaborate with <a href="https://ranalli.weebly.com/">Dr. Tina-Marie Ranalli 
         </p>
 
         <div class="cta-row">
