fix:minor edit5

--- a/index.html
+++ b/index.html
@@ -698,6 +698,37 @@
       </div>
 
       <div class="pub">
+        <div class="year">2024</div>
+        <div class="body">
+          <div class="title">Understanding the Challenges Nurses Encounter with Monitoring Technologies in a NICU,'' International Journal of Human-Computer Interaction</div>
+          <div class="venue">International Journal of Human Computer Interaction (IJHCI) • Venkatasubramanian, Ranalli, Kirupaharan, Solanki, Mankodiya</div>
+          <div class="links">
+            <a href="#" class="disabled" style="pointer-events:none; opacity:0.7;"><i class="fa fa-paperclip"></i>Link</a>
+            <a href="#" onclick="copyBib('bib-cacm24'); return false;"><i class="fa fa-quote-left"></i>BibTeX</a>
+          </div>
+          <pre id="bib-cacm24" style="display:none;">
+@article{Venkatasubramanian01122024,
+author = {Krishna Venkatasubramanian and Tina-Marie Ranalli and Priyankan Kirupaharan and Dhaval Solanki and Kunal Mankodiya},
+title = {Understanding the Challenges Nurses Encounter with Monitoring Technologies in a NICU},
+journal = {International Journal of Human–Computer Interaction},
+volume = {40},
+number = {23},
+pages = {8142--8165},
+year = {2024},
+publisher = {Taylor \& Francis},
+doi = {10.1080/10447318.2023.2278297},
+URL = { 
+        https://doi.org/10.1080/10447318.2023.2278297
+},
+eprint = { 
+        https://doi.org/10.1080/10447318.2023.2278297
+}
+}
+          </pre>
+        </div>
+      </div>
+
+      <div class="pub">
         <div class="year">2023</div>
         <div class="body">
           <div class="title">'I... caught a person casing my house... and scared him off.': The Use of Security-focused Smart Home Devices by People with Disabilities (Honorable Mention)</div>
